# C__RayTracer

./: CMakeLists.txt  Camera.cpp  Camera.h  Colour.cpp  Colour.h  Geometric_Object.cpp  Geometric_Object.h  Light.cpp  Light.h  Light_Source.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Triangle.cpp  Utilities.cpp  Utilities.h  Vector.cpp  Vector.h  main.cpp
General_Utilities/: Utilities.cpp  Utilities.h
Geometry_Utilities/: Geometric_Object.h  Plane.h  Sphere.cpp  Triangle.h
Math_Utilities/: Vector.cpp
Tracing_Utilities/: Camera.h  Colour.cpp  Colour.h  Light.cpp  Light.h  Light_Source.cpp  Light_Source.h  RGBType.h  Ray.h
